# quizzik

./: .brainstorm.txt  .gitignore
quizzik/: Cargo.toml  environment.yml  pyproject.toml
quizzik/pysrc/: __init__.py  run.py
quizzik/pysrc/app/: __init__.py
quizzik/pysrc/app/static/js/: package.json
quizzik/src/: lib.rs  main.rs
