[package]
name = "quizzik"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "quizziklib"
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
postgres = "0.19.4"
pyo3 = { version = "0.18.0", features = ["extension-module"] }
r2d2 = "0.8.10"
r2d2_postgres = "0.18.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
# sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "json", "macros", "chrono", "offline"] }
# tokio = { version = "1.24.2", features = ["full"] }
toml = "0.6.0"
